@@ -6,6 +6,13 @@ o zenmap scan inventory place holder.
 
 o zenmap radialnet integration place holder.
 
+o --traceroute now uses the timing ping probe saved from host
+  discovery and port scanning instead of finding its own probe. The
+  timing ping probe is always the best probe for eliciting a response
+  Nmap knows of. This will have the most effect on traceroute after a
+  ping scan, where traceroute would sometimes pick the wrong probe and
+  traceroute would fail even though the target was up.
+
 o Expanded nmap-services to include information on how frequently each
   port number is found open.  The results were generated by scanning
   tens of millions of IPs on the Internet. [Fyodor]
